From 4e8154a (emptysim):
=======================

In prisim/interferometry.py,

(*) In member function append_settings() of class ROI_parameters,
initialize telescope and freq attributes if they are found to be None.

In scripts/run_prisim.py,

(*) If no sources are found to be simulated for the entire simulation,
one source is assumed to be present just for purposes of memory
estimates.
(*) Pass chans, telescope, and freq_scale inputs in call to member
function append_settings() of class ROI_parameters even in case of
no sources (empty simulation).
(*) Update code to handle a completely empty simulation.

From 2c562ed (ephemeris):
========================

In prisim/interferometry.py,

(*) Import Galactic from astropy.coordinates
(*) In member function append_settings() of class ROI_parameters,
add input keyword time_jd to pass time in JD for accurate ephemeris
calculation. Update and adjust member function docstring accordingly
(*) In member function append_settings() of class ROI_parameters,
fix bug in inaccurate calculation of Alt-Az and use the astropy
coordinate transformation instead to convert from RA-Dec to Alt-Az
using the location and time information.

In scripts/run_prisim.py,

(*) Pass time in JD as input in call to member function
append_settings() of class RI.ROI_parameters based on the changes
above

From d277b30 (BPS_PS_errorbar):
==============================

In prisim/bispectrum_phase.py,

(*) In function read_CPhase_cross_power_spectrum(), ensure reading of
the group name (which is a string) is converted to int for certain
cases as appropriate and to ensure comptability.

From fda8c3f (BPS_PS_errorbar):
==============================

In prisim/bispectrum_phase.py,

(*) Add function incoherent_kbin_averaging() along with docstring, to
perform incoherent averaging of power spectra in k-bins and also to
compute power spectrum in Delta^2 units.
(*) Update function save_CPhase_cross_power_spectrum() to save cross